--- a/templates/shop/dashboard/invoice.html
+++ b/templates/shop/dashboard/invoice.html
@@ -229,9 +229,10 @@
         <div class="row d-flex justify-content-center">
           <div class="col-md-8">
             <div class="card">
-              <div class="d-flex flex-row p-2 mt-3 mb-3">
+              <div class="d-flex justify-content-between flex-row p-2 mt-3 mb-3">
                 <img src="{{settings.shop_logo.url}}" width="48">
                 <div class="d-flex flex-column"> <span class="fw-bold">Order Invoice</span># {{transaction.transaction_id}} </div>
+                <div class="d-flex flex-column"> <span class="fw-bold">Gate Pass</span></div>
               </div>
               <hr>
               <div class="table-responsive p-2">
