--- a/templates/shop/checkout.html
+++ b/templates/shop/checkout.html
@@ -50,7 +50,7 @@
                             </div>
                      
                             <div class="form-group">
-                                <label>Phone <span>*</span></label>
+                                <label>Phone (e.g., 0300-0000000)<span>*</span></label>
                                 <input name="phone" pattern="\d{4}-\d{7}" title="0300-0000000" required type="text" id="phone">
                             </div>
                             <div class="form-group">
